hphp/hack/test/typecheck/like_types/like_casts.php.exp
File "like_casts.php", line 13, characters 26-29:
Invalid "as" expression hint (Typing[4195])
File "like_casts.php", line 13, characters 26-29:
The "as" operator cannot be used with a union
File "like_casts.php", line 14, characters 13-16:
Invalid "as" expression hint (Typing[4195])
File "like_casts.php", line 14, characters 13-16:
The "as" operator cannot be used with a union
File "like_casts.php", line 4, characters 17-25:
Illegal constant value (Naming[2023])
File "like_casts.php", line 6, characters 31-34:
Invalid "as" expression hint (Typing[4195])
File "like_casts.php", line 6, characters 31-34:
The "as" operator cannot be used with a union
File "like_casts.php", line 5, characters 24-27:
Invalid "as" expression hint (Typing[4195])
File "like_casts.php", line 5, characters 24-27:
The "as" operator cannot be used with a union
File "like_casts.php", line 8, characters 35-38:
Invalid "as" expression hint (Typing[4195])
File "like_casts.php", line 8, characters 35-38:
The "as" operator cannot be used with a union
File "like_casts.php", line 11, characters 15-23:
Illegal constant value (Naming[2023])
